--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=8000
 MONGO_URI=mongodb+srv://DhruvNaveen:9466473713@cluster0.w1jbd.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 JWT_SECRET=DHRUV
+NODE_ENV=development
